--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-exclude = cdk_scraper_deployment/
+exclude = cdk_scraper_deployment/|quickbooks-search/
 
 warn_return_any = true
 warn_unused_configs = true
