Config: Update .gitignore and Makefile for RPi credentials in docker/rpi-worker

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 build
 temp
-__pycache__
+# AWS Credentials for RPi deployment
+docker/rpi-worker/rpi_credentials
+docker/rpi-worker/rpi_config
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 .pytest_cache
 cocli.egg-info/
 .gemini/
@@ -12,3 +19,4 @@ dist
 .envrc
 turboship
 quickbooks-search
+docker/rpi-worker/.rpi_credentials
