feat: Support remote config fetching for workers
- Worker: Added 'ensure_campaign_config' to fetch config from S3 if missing locally.
- Worker: Added --campaign flag to scrape and details commands.
- Docker: Updated run_worker.sh to be campaign-aware via CAMPAIGN_NAME env var.

--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -15,11 +15,17 @@ RUN uv pip install --system -e .
 
 # Create the run_worker.sh script directly in the Dockerfile
 RUN echo '#!/bin/bash' > docker/rpi-worker/run_worker.sh && \
+    echo 'CAMPAIGN_NAME=${CAMPAIGN_NAME:-turboship}' >> docker/rpi-worker/run_worker.sh && \
     echo '# Pass arguments to the script (e.g. "cocli worker details")' >> docker/rpi-worker/run_worker.sh && \
     echo 'if [ "$#" -eq 0 ]; then' >> docker/rpi-worker/run_worker.sh && \
-    echo '    cocli worker scrape' >> docker/rpi-worker/run_worker.sh && \
+    echo '    cocli worker scrape --campaign "$CAMPAIGN_NAME"' >> docker/rpi-worker/run_worker.sh && \
     echo 'else' >> docker/rpi-worker/run_worker.sh && \
-    echo '    "$@"' >> docker/rpi-worker/run_worker.sh && \
+    echo '    # If the user passed "cocli worker details", we should still append the campaign if it was not in args' >> docker/rpi-worker/run_worker.sh && \
+    echo '    if [[ "$*" == *"worker"* ]] && [[ "$*" != *"--campaign"* ]] && [[ "$*" != *"-c "* ]]; then' >> docker/rpi-worker/run_worker.sh && \
+    echo '        "$@" --campaign "$CAMPAIGN_NAME"' >> docker/rpi-worker/run_worker.sh && \
+    echo '    else' >> docker/rpi-worker/run_worker.sh && \
+    echo '        "$@"' >> docker/rpi-worker/run_worker.sh && \
+    echo '    fi' >> docker/rpi-worker/run_worker.sh && \
     echo 'fi' >> docker/rpi-worker/run_worker.sh && \
     chmod +x docker/rpi-worker/run_worker.sh
 
