--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,9 @@ exclude = [
     "cocli.egg-info",
     "data",
     "cdk_scraper_deployment",
-    "turboship", # Exclude the entire turboship directory
+    "turboship",
+    "cdk.out",
+    "quickbooks-search",
 ]
 follow_imports = "normal"
 
