fix: Robust campaign detection for Docker workers
- worker.py: Added CAMPAIGN_NAME env var fallback.
- Dockerfile: Simplified run_worker.sh to leverage env var fallback.

--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -19,17 +19,12 @@ ENV COCLI_DATA_HOME=/app/cocli_data
 # Create the run_worker.sh script directly in the Dockerfile
 RUN echo '#!/bin/bash' > docker/rpi-worker/run_worker.sh && \
     echo 'CAMPAIGN_NAME=${CAMPAIGN_NAME:-turboship}' >> docker/rpi-worker/run_worker.sh && \
+    echo 'export CAMPAIGN_NAME' >> docker/rpi-worker/run_worker.sh && \
     echo 'echo "Starting worker for campaign: $CAMPAIGN_NAME"' >> docker/rpi-worker/run_worker.sh && \
     echo 'if [ "$#" -eq 0 ]; then' >> docker/rpi-worker/run_worker.sh && \
-    echo '    cocli worker scrape --campaign "$CAMPAIGN_NAME"' >> docker/rpi-worker/run_worker.sh && \
+    echo '    cocli worker scrape' >> docker/rpi-worker/run_worker.sh && \
     echo 'else' >> docker/rpi-worker/run_worker.sh && \
-    echo '    # If the user passed "cocli worker details", execute it' >> docker/rpi-worker/run_worker.sh && \
-    echo '    # We check if they already provided a campaign' >> docker/rpi-worker/run_worker.sh && \
-    echo '    case "$*" in' >> docker/rpi-worker/run_worker.sh && \
-    echo '        *"--campaign"*|*"-c "*) "$@" ;;' >> docker/rpi-worker/run_worker.sh && \
-    echo '        *"worker"*) "$@" --campaign "$CAMPAIGN_NAME" ;;' >> docker/rpi-worker/run_worker.sh && \
-    echo '        *) "$@" ;;' >> docker/rpi-worker/run_worker.sh && \
-    echo '    esac' >> docker/rpi-worker/run_worker.sh && \
+    echo '    "$@"' >> docker/rpi-worker/run_worker.sh && \
     echo 'fi' >> docker/rpi-worker/run_worker.sh && \
     chmod +x docker/rpi-worker/run_worker.sh
 
