feat: implement 11ty web dashboard and automated cloud reporting
- Initialize 11ty-based web dashboard in cocli/web/
- Update cocli report to support JSON output and automated S3 upload
- Automate S3 sync for email exports in export_enriched_emails.py
- Fix Makefile web-deploy to prevent accidental deletion of dynamic assets
- Mark Phase 5 as completed in plan.md
- Update .gitignore to exclude web node_modules and homepage symlink

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ temp
 docker/rpi-worker/.rpi_credentials
 docker/rpi-worker/.rpi_config
 
+# Web Dashboard
+cocli/web/node_modules/
+homepage
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
