fix: prevent uv sync from hanging by restricting package discovery
- Update pyproject.toml to only include 'cocli' package and subpackages
- Explicitly exclude large non-package directories (cocli_data, tests, scripts, etc.) from setuptools discovery

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,7 +68,11 @@ dev = [
 
 [tool.setuptools]
 package-dir = {"" = "."}
-packages = {find = {where = ["."]}}
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["cocli*"]
+exclude = ["cocli_data*", "tests*", "scripts*", "build*", "dist*", "temp*"]
 
 [tool.uv]
 package = true
