fix: resolve off-by-one boundary error in grid generation
- Refactor grid loops to use integer step counts instead of float comparisons
- Ensure North row and East column tiles are consistently included
- Fixes issue where boundary tiles were skipped due to epsilon logic and coordinate signs

--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -1,29 +1,36 @@
-# Use our public base image from Docker Hub
-# This image already has OS libs, Python, UV, and Playwright Chromium installed.
-FROM integrator/cocli-rpi-base:latest
+# Use the official Microsoft Playwright image
+FROM mcr.microsoft.com/playwright/python:v1.55.0-noble
 
 WORKDIR /app
 
+# Install system dependencies needed for pandas/numpy on ARM
+RUN apt-get update && apt-get install -y \
+    libatlas-base-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install UV for fast dependency management
+RUN pip install uv
+
+# Copy the dependency files first for caching
+COPY pyproject.toml uv.lock* ./
+
+# Export requirements (including 'full' for pandas/numpy) and install them
+RUN uv export --frozen --no-dev --no-hashes --extra full > requirements.txt && \
+    uv pip install -r requirements.txt --system && \
+    uv pip install ruff --system
+
 # Copy the application code
-# This is the layer that changes frequently
 COPY . .
 
-# Install project dependencies into system python
-# Since base image has uv and core libs, this is fast.
-# We use --system to avoid venv overhead on the dedicated worker.
-# Install playwright browsers
-RUN playwright install chromium
-
-# Install the project, dependencies, and ruff for linting
-RUN pip install . ruff
+# Install the package into the system python
+RUN uv pip install . --system --no-deps
 
 # Final static analysis check
 RUN ruff check cocli/
 
 # Verify that the core application can be imported (Safety check)
-RUN python3 -c "import cocli.main; import cocli.commands.worker; print('Import check passed!')"
-
-# Set the entrypoint to the wrapper script
+# We run this from /tmp to ensure we are testing the installed package
+RUN cd /tmp && python3 -c "import cocli.main; import cocli.commands.worker; print('Import check passed!')"
 
 # Set COCLI_DATA_HOME to a persistent-ish location in the container
 ENV COCLI_DATA_HOME=/app/cocli_data
