Implement supervisor heartbeats and enhance RPI hotfix utility
- Add periodic S3 heartbeats to 'run_supervisor' for monitoring system health and worker counts.
- Add 'psutil' and 'types-psutil' dependencies for resource tracking.
- Update 'make hotfix-rpi' to sync full source and install package/dependencies in containers.
- Minor CSS adjustments to status indicators and phone number formatting.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "fuzzywuzzy",
     "simplekml",
     "python-dateutil",
+    "psutil",
 ]
 
 [project.scripts]
@@ -62,6 +63,7 @@ dev = [
     "pandas-stubs",
     "types-dateparser",
     "types-pytz",
+    "types-psutil",
     "ruff",
     "boto3-stubs[s3,sqs]",
 ]
