--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "simplekml",
     "python-dateutil",
     "psutil",
+    "aiohttp>=3.13.3",
+    "selectolax>=0.4.6",
 ]
 
 [project.scripts]
