Commit RPi Dockerfile changes

--- a/docker/rpi-worker/Dockerfile
+++ b/docker/rpi-worker/Dockerfile
@@ -6,11 +6,12 @@ WORKDIR /app
 # Install system dependencies needed for pandas/numpy on ARM, plus qsv for indexing
 RUN apt-get update && apt-get install -y \
     libatlas-base-dev \
-    wget gpg --no-install-recommends && \
-    wget -O - https://dathere.github.io/qsv-deb-releases/qsv-deb.gpg | gpg --dearmor -o /usr/share/keyrings/qsv-deb.gpg && \
-    echo "deb [signed-by=/usr/share/keyrings/qsv-deb.gpg] https://dathere.github.io/qsv-deb-releases ./" | tee /etc/apt/sources.list.d/qsv.list && \
-    apt-get update && \
-    apt-get install -y qsv --no-install-recommends && \
+    wget unzip --no-install-recommends && \
+    export ARCH=$(uname -m) && \
+    if [ "$ARCH" = "x86_64" ]; then QSV_ARCH="x86_64-unknown-linux-gnu"; elif [ "$ARCH" = "aarch64" ]; then QSV_ARCH="aarch64-unknown-linux-gnu"; fi && \
+    wget https://github.com/jqnatividad/qsv/releases/download/0.134.0/qsv-0.134.0-$QSV_ARCH.zip && \
+    unzip qsv-0.134.0-$QSV_ARCH.zip -d /usr/local/bin && \
+    rm qsv-0.134.0-$QSV_ARCH.zip && \
     rm -rf /var/lib/apt/lists/*
 
 # Install UV for fast dependency management
