Refactor: decommission cocli_data symlink in favor of data
- Replaced all repo-relative 'cocli_data' references with 'data'.
- Updated .gitignore and MANIFEST.in to reflect the change.
- Updated absolute paths in .vscode/launch.json to workspace-relative paths.
- Aligned Makefile, mise.toml, and scripts with the 'data' entry point.
- Updated documentation (README.md, docs/) to reflect the new structure.
- Renamed 'cocli_data_bucket_name' to 'data_bucket_name' in config and CDK.
- Verified all 73 tests pass.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -115,7 +115,7 @@
             "args": [
                 "import-data",
                 "lead-sniper",
-                "/home/mstouffer/.local/share/cocli_data/scraped_data/lead-sniper-photographer-20250823225603.csv",
+                "${workspaceFolder}/data/scraped_data/lead-sniper-photographer-20250823225603.csv",
                 "--debug"
             ],
             "console": "integratedTerminal",
