perf: optimize search with DuckDB and resolve fuzzywuzzy warnings
- Added 'python-Levenshtein' and 'rapidfuzz' to pyproject.toml to silence performance warnings.
- Deferred 'fuzzywuzzy' imports in CLI commands to improve startup time.
- Refactored search service to use DuckDB for fast, robust in-memory search.
- Added 'mock_cocli_env' fixture to tests/conftest.py for centralized test isolation.
- Added comprehensive unit tests for search functionality.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "httpx",
     "transitions",
     "fuzzywuzzy",
+    "python-Levenshtein",
     "simplekml",
     "python-dateutil",
     "psutil",
