fix: standardize anti-bot headers and improve S3 queue discovery
- Integrated centralized ANTI_BOT_HEADERS and USER_AGENT across all scrapers (website, head) and Playwright browser contexts.
- Improved FilesystemQueue S3 discovery to dynamically list existing shards, resolving a bug where non-hex IDs (like Google Maps Place IDs) were ignored.
- Updated 'hotfix-rpi' target in Makefile to include the VERSION file and fixed indentation issues.
- Enhanced campaign reporting to count virtual mission tasks (target-tiles) as pending.
- Refactored grid generation to support loading target locations from campaign CSV files.
- Modernized pyproject.toml to use dynamic versioning from the VERSION file.
- Updated campaign models with legacy location field mapping support.
- Incremented version to 0.2.89.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "cocli"
-version = "0.2.0"
+dynamic = ["version"]
 description = "A CLI for managing a plain-text CRM."
 authors = [{ name = "Mark Stouffer", email = "mark@getbizkite.com" }]
 requires-python = ">=3.9"
@@ -100,6 +100,9 @@ exclude = [
     "cocli.egg-info*",
     "cdk_scraper_deployment*"
 ]
+
+[tool.setuptools.dynamic]
+version = {file = "VERSION"}
 
 [tool.uv]
 package = true
