--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,4 +9,4 @@ recursive-exclude .mypy_cache *
 recursive-exclude .pytest_cache *
 recursive-exclude .ruff_cache *
 recursive-exclude cdk_scraper_deployment *
-exclude worker_scrape.log
+exclude .logs/worker_scrape.log
