Standardize USV I/O with iterator support, resolve supervisor heartbeat delivery, and harden campaign models

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-exclude data *
+recursive-exclude cocli_data *
 recursive-exclude cocli_share *
 recursive-exclude homepage *
 recursive-exclude logs *
