feat: migrate turboship campaign to gold standard architecture
- Implement `TurboshipLegacyProspect` model for quarantined ingestion of legacy USV formats.
- Standardize identity foundation with `PlaceID` and `CompanySlug` validation types.
- Refactor `GoogleMapsProspect` with robust address hydration and identity tripod validation.
- Add suite of scripts for turboship migration: auditing, consolidation, and hydration.
- Update sharding logic and text utilities to support deterministic identity hashing.
- Revise project roadmap (plan.md) and task tracker (task.md) for Phase 18.
- Update documentation for S3 bucket schemas and Universal Data Namespace.
- Switch default AWS profile to `bizkite-support` in .envrc.

--- a/.envrc
+++ b/.envrc
@@ -1,7 +1,7 @@
 eval "$(mise direnv activate)"
 
 export COCLI_DATA_HOME=/home/mstouffer/repos/company-cli/data
-export AWS_PROFILE="westmonroe-support"
+export AWS_PROFILE="bizkite-support"
 
 export MYPY_PATH="$(pwd)/cocli"
 
