tui: implement note deletion with confirmation and add management tests
- Add ConfirmScreen modal for generic confirmation dialogs.
- Implement note deletion in CompanyDetail with d keybinding and confirmation.
- Enhance NotesTable with i (edit) and d (delete) key routing.
- Add tests/tui/test_notes_management.py to verify note navigation, editing, and deletion.
- Update pyproject.toml and .code_signatures.json for new functionality and tests.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,3 +136,7 @@ disable_error_code = ["call-overload"]
 [[tool.mypy.overrides]]
 module = "cocli.tui.campaign_app"
 disable_error_code = ["func-returns-value"]
+
+[[tool.mypy.overrides]]
+module = "cocli.tui.widgets.company_detail"
+disable_error_code = ["func-returns-value"]
