feat(tui): integrate status monitoring and direct index search
- Implemented StatusView in TUI for environment and campaign monitoring
- Refactored SearchService to query checkpoint.usv directly via DuckDB
- Added 'Recently Updated' sorting to company list (press 'r')
- Added quote-stripping validators to lead names in all models
- Decoupled cluster management hostnames from campaign config
- Migrated Makefile reporting and sync commands to core services
- Resolved ValidationError in search results with NULL tags

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ docker/rpi-worker/.rpi_config
 # Web Dashboard
 cocli/web/node_modules/
 homepage
+.code_signatures.json
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
