feat: implement field-level WAL and UDP multicast gossip bridge for distributed updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "aiohttp>=3.13.3",
     "selectolax>=0.4.6",
     "duckdb",
+    "zeroconf>=0.148.0",
+    "watchdog>=6.0.0",
 ]
 
 [project.scripts]
