feat: stabilize distributed cluster with centralized WAL and sharded index optimizations
- Implemented centralized field-level Write-Ahead Log (WAL) in data/wal/ to eliminate O(N) directory scanning.
- Refactored Domain and Email index managers to sharded USV structures with DuckDB support.
- Optimized lead export and reporting via DuckDB joins, drastically reducing processing time.
- Aligned data paths with global shared pool principle for companies and people.
- Enhanced CompactManager with automated root-level file sweeping.
- Updated architecture documentation and implemented new backfill commands.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,8 +129,18 @@ exclude = [
     "turboship",
     "cdk.out",
     "quickbooks-search",
+    "mutt-setup",
 ]
 follow_imports = "normal"
+
+[tool.ruff]
+exclude = [
+    "mutt-setup",
+    ".venv",
+    "data",
+    "build",
+    "dist",
+]
 
 [[tool.mypy.overrides]]
 module = "cocli.core.website_cache"
