fix(tui): refresh campaign indicator and implement direnv file watching for AWS profile

--- a/.envrc
+++ b/.envrc
@@ -8,20 +8,20 @@ export COCLI_DATA_HOME="${PWD}/data"
 export MYPY_PATH="${PWD}/cocli"
 
 # Source the campaign-specific AWS profile (gitignored)
+# watch_file ensures direnv reloads when the profile changes
+watch_file .aws_profile.env
 if [ -f .aws_profile.env ]; then
     source_env .aws_profile.env
 fi
 
 # Development Hooks
 on_enter() {
-    echo "Entering directory: $(pwd)"
+    echo "Cocli Environment Loaded: ${COCLI_DATA_HOME}"
     echo "Starting mypy daemon..."
     mise run mypy-daemon-start
 }
 
 on_exit() {
-    echo "Exiting directory: $(pwd)"
     echo "Stopping mypy daemon..."
     mise run mypy-daemon-stop
 }
-export AWS_PROFILE="bizkite-support"
